# cameratransform

./: .coveragerc  .gitignore  .hgignore  .hgsub  .hgsubstate  .readthedocs.yaml  .travis.yml  CLAUDE.md  LICENSE.txt  README.md  README.rst  bitbucket-pipelines.yml  coveralls.py  pyproject.toml  requirements.txt  setup.py  usage_CameraTransform.py  usage_FitTransform.py
.github/workflows/: publish.yml  test.yml
CameraTransform/: CameraTransform.py  QtShortCuts.py  __init__.py  camera.py  gps.py  gui_demonstrator.py  lens_distortion.py  parameter_set.py  projection.py  ray.py  scene.py  spatial.py  statistic.py
CameraTransform/scripts/: calibrate.py  gui_calibrate.py
cameratransform/: QtShortCuts.py  __init__.py  camera.py  gps.py  gui_demonstrator.py  lens_distortion.py  parameter_set.py  projection.py  ray.py  scene.py  spatial.py  statistic.py  utils.py
cameratransform/gui_demonstrator/: QtShortCuts.py  demo_qt.py
cameratransform/gui_tools/: __init__.py
cameratransform/gui_tools/calibrate/: QExtendedGraphicsView.py  calibrate.py  gui_calibrate.py
cameratransform/gui_tools/demonstrator/: QtShortCuts.py  demo_includes.py  demo_matplotlib.py  demo_qt.py
cameratransform/scripts/: QExtendedGraphicsView.py  calibrate.py  gui_calibrate.py
development/: add_copyright.py  copyright_notice.txt  raise_version.py  upload_pypi.py
docs/: api.rst  autobuild.bat  camera.rst  conf.py  coordinate_systems.rst  fitting.rst  general.rst  getting_started.ipynb  gps.rst  index.rst  installation.rst  lens_distortion.rst  projections.rst  requirements.readthedocs.txt  spatial.rst  stereo.ipynb
docs/examples/heights/: data.cdb  example_heights.ipynb  example_heights_clickpoints.ipynb
docs/examples/satellite/: data.cdb  example_satellite.ipynb
docs/source/: api.rst  autobuild.bat  camera.rst  conf.py  coordinate_systems.rst  getting_started.ipynb  gps.rst  index.rst  installation.rst  lens_distortion.rst  projections.rst  requirements.readthedocs.txt  spatial.rst  stereo.ipynb
tests/: strategies.py  test_fits.py  test_gps.py  test_helpers.py  test_ray.py  test_transforms.py
