[tool.poetry]
name = "cameratransform"
version = "1.2"
description = "Projects coordinates from 2D to 3D and can fit camera parameters"
authors = ["rgerum <14153051+rgerum@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cameratransform"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
pandas = "^1.5.1"
scipy = "^1.9.3"
tqdm = "^4.64.1"
opencv-python = {version = "^4.6.0.66", extras = ["projecting_top_view"]}
matplotlib = {version = "^3.6.2", extras = ["projecting_top_view"]}
pillow = {version = "^9.3.0", extras = ["exif_extraction"]}
requests = {version = "^2.28.1", extras = ["exif_extraction"]}
nbsphinx = {version = "^0.8.9", extras = ["docs"]}
sphinx-rtd-theme = { version = "^1.2.0", extras = ["docs"]}


[tool.poetry.group.dev.dependencies]
hypothesis = "^6.56.4"
mock = "^4.0.3"
coverage = "^6.5.0"
coveralls = "^3.3.1"
pytest = "^7.2.0"



[tool.poetry.group.gui.dependencies]
qtpy = "^2.3.1"
pyqt5 = "^5.15.9"
qimage2ndarray = "^1.10.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
