[project]
name = "cameratransform"
version = "1.2.1"
description = "Projects coordinates from 2D to 3D and can fit camera parameters"
authors = [{name = "Richard Gerum", email = "14153051+rgerum@users.noreply.github.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
projecting_top_view = [
    "opencv-python>=4.11.0.86",
    "matplotlib>=3.10.3",
]
exif_extraction = [
    "pillow>=11.3.0",
    "requests>=2.32.4",
]
gui = [
    "qtpy>=2.3.1",
    "pyqt5>=5.15.9",
    "qimage2ndarray>=1.10.0",
]


[dependency-groups]
dev = [
    "hypothesis>=6.56.4",
    "mock>=4.0.3",
    "coverage>=6.5.0",
    "coveralls>=3.3.1",
    "pytest>=7.2.0",
]
docs = [
    "jupyter>=1.0.0",
    "sphinx>=7",
    "nbsphinx>=0.9.7",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]


[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cameratransform"]
